<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        tools:text="@string/question_australia" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_marginEnd="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_marginEnd="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="4dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/previous_button"
            android:layout_marginEnd="1dp"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_left"
            android:background="@color/purple_500"
            android:contentDescription="@string/left" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_marginEnd="1dp"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:contentDescription="@string/right"
            android:src="@drawable/arrow_right" />

    </LinearLayout>


</LinearLayout>